gccida/c0/output_constant
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:4984:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:4985:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:4986:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:4997:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+68h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:5004:8: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
expa = lang_hooks_0.expand_constant( exp); 
       ^~~~~~~~~~~~
       lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:5004:36: error: called object type '<dependent type>' is not a function or function pointer
expa = lang_hooks_0.expand_constant( exp); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:5053:12: error: expected expression
*( _OWORD *)d.r = *( _OWORD *)&expa->block.vars; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/varasm.c:5053:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)d.r = *( _OWORD *)&expa->block.vars; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant/src/obj/varasm.o] Error 1
